--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.0.0",
     "framer-motion": "^11.18.2",
     "motion": "^11.11.15",
     "react": "^18.3.1",
