--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
   },
   "dependencies": {
     "@splinetool/react-spline": "^4.0.0",
+    "@studio-freight/lenis": "^1.0.42",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
+    "lucide-react": "^0.541.0",
     "motion": "^11.11.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.28.0",
     "react-typed": "^2.0.12",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
